--- a/inicio/static/css/styles.css
+++ b/inicio/static/css/styles.css
@@ -180,11 +180,12 @@ Inicia estilos inicio.html*/
   color:#26a69a;
 }
 .caja_mostrar{
-  border-bottom: 1px solid gray;
+  box-shadow: 0px 2px 1px #888888;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin:20px;
 }
 .caja{
   border-bottom: 1px solid gray;
