--- a/inicio/templates/inicio/prueba.html
+++ b/inicio/templates/inicio/prueba.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Easy Agro</title>
+    <title>Recepción</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
@@ -13,7 +13,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
 
   </head>
-
   <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
@@ -39,102 +38,37 @@
       </div>
     </nav>
 
-
     <section class="container">
 
-      <div class="row center">
 
-        <div class="col m12 s12 l8 offset-l2">
-          <div class="col l12 m12 s12">
-            <form class="" id="filtro" method="post">{% csrf_token %}
-              <h5>Encontrar Productor</h5>
-              <div class="select input-field col s12 m6 l6">
-                <label for="">Localidad:</label>
-                {{form1.localidad}}
-              </div>
+  		<div class="row center">
+        <div class="col l10 m12 s12 offset-l1 left-align">
+          <ul class="collection with-header">
+            <li class="collection-header"><h4 class="titRec">Recepción<span>/limón</span></h4></li>
+            {%for recepcion in recepciones%}
+              <li class="collection-item">
 
-              <div class="select input-field col s12 m6 l6">
-                <label for="">Municipio:</label>
-                {{form1.municipio}}
-              </div>
-
-            </form>
-          </div>
-          <form method="post" id="recepcion" enctype="multipart/form-data">{% csrf_token %}
-            <div class="col s12 m12 l12">
-              <div class="select input-field col s12 m6 l6">
-                <label for="">Productor:</label>
-                {{form.recepcion.Productor}}
-              </div>
-              <div class="col l12 m12 s12">
-                <h5>Información Recepcion</h5>
-              </div>
-              <div class="select input-field col s12 m6 l6">
-                <label for="">Calidad Aproximada:</label>
-                {{form.recepcion.calidad_aprox}}
-              </div>
-              <div class="select truncate input-field col s12 m6 l6">
-                <label for="">Firma:</label>
-                {{form.recepcion.firma}}
-              </div>
-              <div class="select input-field col s12 m6 l6">
-                <label for="">Status:</label>
-                {{form.status.estado}}
-              </div>
-              <div class="text input-field col s12 m6 l6">
-                <label for="">Representante:</label>
-                {{form.recepcion.representante}}
-              </div>
-            </div>
-            {%for form in forms%}
-
-              <div class="col m12 s12 l12">
-                <h5>Nueva Caja</h5>
-              {%for field in form%}
-
-                {%if field.label == "Tamanio" or field.label == "Peso neto"%}
-                  <div class="select input-field col s12 m6 l6">
-                    <label for="">{{field.label}}:</label>
-                    {{field}}
-                  </div>
-                {%elif field.label == "Kilogramos"%}
-                  <div class="col s12 m12 l12">
-                    <h5>Prueba</h5>
-                  </div>
-                  <div class="text input-field col s12 m6 l6">
-
-                    <label for="">{{field.label}}:</label>
-                    {{field}}
-                  </div>
-                {%else%}
-                  <div class="text input-field col s12 m6 l6">
-                    <label for="">{{field.label}}:</label>
-                    {{field}}
-                  </div>
-                {%endif%}
-
-              {%endfor%}
-                <div class="col s12 m12 l12">
-                  <div class="divider"></div>
-                  <div class="section">
-                    <h5>Peso Neto</h5>
-                    <h3 class="totPeso" id="pesoTotal">---</h3>
-                  </div>
+                <div>
+                  <span>{{recepcion.productor}}</span>
+                  <span>{{recepcion.fecha}}</span>
+                  <span>{{recepcion.status}}</span>
+                  <a href="{% url 'modRecepcion' recepcion.idproducto %}" class="secondary-content">
+                    <i class="material-icons">send</i>
+                  </a>
                 </div>
-              </div>
+
+              </li>
             {%endfor%}
-
-            <button class="btn waves-effect waves-light" type="submit">Guardar Recepción</button>
-            <button class="btn waves-effect waves-light" id="borrar" >Borrar Caja</button>
-            <button class="btn waves-effect waves-light" id="agregar">Agregar Caja</button>
-          </form>
-
+          </ul>
         </div>
 
 
-      </div>
+  		</div>
 
-    </section>
+  	</section>
+
+
+
     <script type="text/javascript">
       $(document).ready(function() {
         $('select').material_select();
@@ -142,204 +76,8 @@
       $("#loc").change(function() {
         $("#filtro").submit();
       })
-
       $("#mun").change(function() {
         $("#filtro").submit();
-      })
-
-      $("#agregar").click(function(ev) {
-
-        $('#recepcion').append("<input type=\"hidden\" name=\"agregform\" value=\"{{nforms}}\">")
-        $('#recepcion').submit()
-      })
-      $("#borrar").click(function(ev) {
-        $('#recepcion').append("<input type=\"hidden\" name=\"borrarform\" value=\"{{nforms}}\">")
-        $('#recepcion').submit()
-      })
-
-      $caja1=$("#recepcion").children("div.caja:eq(0)");
-      $caja2=$("#recepcion").children("div.caja:eq(1)");
-      $caja3=$("#recepcion").children("div.caja:eq(2)");
-
-      $caja1.children("div:nth-child(12)").children("input").change(function(ev){
-
-        var $prueba1=$caja1.children("div:nth-child(10)").children("input")[0].value;
-        var $prueba3=$caja1.children("div:nth-child(14)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        console.log($prueba2,$prueba1,$prueba3);
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$caja1.children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        console.log(prom, cantidad, total);
-
-        $caja1.children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
-      	console.log(ev);
-
-      })
-      $caja1.children("div:nth-child(10)").children("input").change(function(ev){
-
-        var $prueba1=$caja1.children("div:nth-child(12)").children("input")[0].value;
-        var $prueba3=$caja1.children("div:nth-child(14)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        console.log($prueba2,$prueba1,$prueba3);
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$caja1.children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        console.log(prom, cantidad, total);
-
-        $caja1.children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
-      	console.log(ev);
-
-      })
-      $caja1.children("div:nth-child(14)").children("input").change(function(ev){
-
-        var $prueba1=$caja1.children("div:nth-child(10)").children("input")[0].value;
-        var $prueba3=$caja1.children("div:nth-child(12)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        console.log($prueba2,$prueba1,$prueba3);
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$caja1.children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        console.log(prom, cantidad, total);
-
-        $caja1.children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
-      	console.log(ev);
-
-      })
-
-      $caja2.children("div:nth-child(10)").children("input").change(function(ev){
-
-        var $prueba1=$caja2.children("div:nth-child(14)").children("input")[0].value;
-        var $prueba3=$caja2.children("div:nth-child(12)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        console.log($prueba2,$prueba1,$prueba3);
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$caja2.children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        console.log(prom, cantidad, total);
-
-        $caja2.children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
-      	console.log(ev);
-
-      })
-      $caja2.children("div:nth-child(12)").children("input").change(function(ev){
-
-        var $prueba1=$caja2.children("div:nth-child(14)").children("input")[0].value;
-        var $prueba3=$caja2.children("div:nth-child(10)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        console.log($prueba2,$prueba1,$prueba3);
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$caja2.children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        console.log(prom, cantidad, total);
-
-        $caja2.children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
-      	console.log(ev);
-
-      })
-      $caja2.children("div:nth-child(14)").children("input").change(function(ev){
-
-        var $prueba1=$caja2.children("div:nth-child(10)").children("input")[0].value;
-        var $prueba3=$caja2.children("div:nth-child(12)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$("#recepcion").children("div:nth-child(3)").children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        $("#recepcion").children("div:nth-child(3)").children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
-
-      })
-
-      $caja3.children("div:nth-child(10)").children("input").change(function(ev){
-
-        var $prueba1=$caja3.children("div:nth-child(14)").children("input")[0].value;
-        var $prueba3=$caja3.children("div:nth-child(12)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        console.log($prueba2,$prueba1,$prueba3);
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$caja3.children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        console.log(prom, cantidad, total);
-
-        $caja3.children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
-      	console.log(ev);
-
-      })
-      $caja3.children("div:nth-child(12)").children("input").change(function(ev){
-
-        var $prueba1=$caja3.children("div:nth-child(14)").children("input")[0].value;
-        var $prueba3=$caja3.children("div:nth-child(10)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        console.log($prueba2,$prueba1,$prueba3);
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$caja3.children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        console.log(prom, cantidad, total);
-
-        $caja3.children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
-
-
-      })
-      $caja3.children("div:nth-child(14)").children("input").change(function(ev){
-
-        var $prueba1=$caja3.children("div:nth-child(10)").children("input")[0].value;
-        var $prueba3=$caja3.children("div:nth-child(12)").children("input")[0].value;
-        var $prueba2=ev.target.value;
-
-        var prom = (Number($prueba1)+Number($prueba2)+Number($prueba3))/3;
-
-        var cantidad =$caja3.children("div:nth-child(4)").children("input")[0].value;
-
-        var total = Number(cantidad)*prom;
-
-        $caja3.children("div:nth-child(15)").children('div.section').children('h3').contents()[0].data=total.toFixed(2)
-
       })
     </script>
   </body>
