--- a/inicio/templates/inicio/recepcionLista.html
+++ b/inicio/templates/inicio/recepcionLista.html
@@ -45,8 +45,27 @@
         <div class="col l10 m12 s12 offset-l1 left-align">
           <ul class="collection with-header">
             <li class="collection-header"><h4 class="titRec">Recepción<span>/limón</span></h4></li>
-            {%for recepcion in pc%}
-              <li class="collection-item"><div>{{recepcion}}<a href="{% url 'modRecepcion' recepcion.IDProductoCampo %}" class="secondary-content"><i class="material-icons">send</i></a></div></li>
+            {%for recepcion in recepciones%}
+              <li class="collection-item">
+
+                <div>
+                  <span>{{recepcion.fecha}}</span>
+                  <span>{{recepcion.productor}}</span>
+                  {%if recepcion.status == "p"%}
+                    <span>Pendiente</span>
+                  {%elif recepcion.status == "r"%}
+                    <span>Reposo</span>
+                  {%elif recepcion.status == "c"%}
+                    <span>Completada</span>
+                  {%else%}
+                    <span>Pagada</span>
+                  {%endif%}
+                  <a href="{% url 'modRecepcion' recepcion.idproducto %}" class="secondary-content">
+                    <i class="material-icons">send</i>
+                  </a>
+                </div>
+
+              </li>
             {%endfor%}
           </ul>
         </div>
