--- a/inicio/templates/inicio/inicio.html
+++ b/inicio/templates/inicio/inicio.html
@@ -64,7 +64,7 @@
 
         <div class="col m12 s12 l8 offset-l2 pendientes">
           <ul class="collection with-header">
-            <li class="collection-header">Pendientes hoy:</h4></li>
+            <li class="collection-header">Recepciones pendientes:</h4></li>
             {%for recepcion in recepciones%}
               <li class="collection-item">
 
